[#929] Fix individual card size on mobile

--- a/frontend/src/modules/entity-detail/styles.scss
+++ b/frontend/src/modules/entity-detail/styles.scss
@@ -56,6 +56,10 @@
           object-fit: cover;
           border-radius: 50%;
           border: 4px solid #fff;
+          @-moz-document url-prefix() {
+            width: 100px;
+            height: 100px;
+          }
         }
       }
       .topbar-title-holder {
@@ -186,6 +190,7 @@
             }
           }
         }
+
         .ant-card-body {
           padding: 24px 10px 0px 10px;
           @media (max-width: 519px) {
@@ -195,6 +200,10 @@
               .ant-col {
                 flex: 0 0 100% !important;
                 max-width: 100% !important;
+              }
+              .individual-details {
+                flex: 0 0 50% !important;
+                max-width: 50% !important;
               }
             }
           }
@@ -210,6 +219,10 @@
             .ant-col {
               flex: 0 0 calc(100% / 3);
               max-width: calc(100% / 3);
+            }
+            .individual-details {
+              flex: 0 0 50% !important;
+              max-width: 50% !important;
             }
           }
 
@@ -655,18 +668,35 @@
   .individuals {
     .slider-card {
       cursor: pointer;
+      @media (max-width: 540px) {
+        & .ant-row {
+          flex-direction: row !important;
+          .individual-details {
+            max-width: 50% !important;
+          }
+          @-moz-document url-prefix() {
+            height: 130px;
+            overflow: hidden;
+          }
+        }
+      }
       .profile-image {
         position: relative;
         width: 100%;
         overflow: hidden;
         text-align: center;
         padding: 20px 0px;
+
         img {
           max-width: 200px;
           max-height: 200px;
           object-fit: cover;
           width: 100%;
           border-radius: 50%;
+          @-moz-document url-prefix() {
+            max-width: 100px;
+            max-height: 100px;
+          }
         }
         &:before {
           background-image: url("../../images/stakeholder-overview/union-icon.svg");
@@ -682,12 +712,26 @@
       }
       .profile-detail {
         padding: 20px 10px 20px 5px;
+        @media (max-width: 540px) {
+          h5 {
+            font-size: 14px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            @-moz-document url-prefix() {
+              font-size: 12px !important;
+            }
+          }
+        }
         h3 {
           color: #255b87;
         }
         h5 {
           font-size: 16px;
           color: #255b87;
+          @-moz-document url-prefix() {
+            font-size: 14px;
+          }
         }
         p {
           display: flex;
@@ -805,6 +849,7 @@
         margin-top: 30px !important;
       }
       .card-wrapper {
+        overflow: hidden;
         .ant-card {
           .ant-card-head {
             .ant-card-head-title {
